--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <img class="bodycont" src="images/images.jpg" alt="">
 
   <h1 class="glow">Brazilian Ice Cream</h1>
-  <form>
-    <div class="wrapper">
+  <form >
+    <div class="wrapper glass">
       <div class="keuzewrapper">
         <h2>Maak uw Keuze</h2>
       </div>
@@ -31,7 +31,6 @@
           <div class="label">Horentje</div>
           <img class="image" src="images/horentje.svg" alt="horentje icoon" />
           <input type="radio" name="keuze" id="horentje" value="horentje" />
-
         </div>
 
         <div class="radio">
@@ -40,12 +39,11 @@
           <input type="radio" name="keuze" id="potje" value="potje" / </div> </div> <div class="keuzewrapper">
           <h2>Welke smaken?</h2>
         </div>
-        <div class="smaak">
+        <div class="smaak" id="marginex">
           <div class="checkbox">
             <div class="label">Chocolade</div>
             <img class="image" src="images/choco.svg" alt="chocolade icoon" />
             <input type="checkbox" name="chocolade" id="chocolade" />
-
           </div>
 
           <div class="checkbox">
@@ -63,7 +61,7 @@
         <div class="keuzewrapper">
           <h2>Hoeveel bolletjes?</h2>
         </div>
-        <div class="aantal">
+        <div class="aantal" id="marginex">
           <div class="number">
             <div class="label" id="aantalHorentje">Aantal Bolletjes:</div>
             <input type="number" name="aantalHorentje" id="aantal" min="1" max="4" />
